<resources>
    <string name="app_name">KinderGan</string>
    <string name="welcome">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_FName">First Name</string>
    <string name="hint_LName">Last Name</string>
    <string name="hint_KidFName">Child\'s First Name</string>
    <string name="hint_ID">ID</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_KidBirthDate">Child\'s Birth Date</string>
    <string name="hint_pic">User Picture</string>
    <string name="hint_KidPic">Child\'s Picture</string>
    <string name="hint_NannyPic">Teacher\'s Picture</string>
    <string name="hint_KGanCity">KinderGan City</string>
    <string name="hint_KGanCityDropdown">Select City</string>
    <string name="hint_KGanName">KinderGan Name</string>
    <string name="hint_KGanNameDropdown">Select Gan</string>
    <string name="hint_KGanAddress">KinderGan Address</string>
    <string name="hint_KGanClass">KinderGan Class</string>
    <string name="hint_KGanClassDropdown">Select Class</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_parent">Parent</string>
    <string name="btn_nanny">Nanny</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="SignUp_lnk">Don\'t have an account? <b>Sign Up</b></string>
    <string name="login_lnk">Already a member? Login</string>
    <string name="btn_contact">Contact the teacher</string>
    <string name="kid_menu">Kid Menu</string>
    <string name="teacher_menu">Teacher Menu</string>
    <string name="notification">Notification</string>
    <string name="camera">Camera</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="time_picker_title">Select Time</string>
    <string name="schedule">Schedule</string>
    <string name="faboptions_vector_overflow_path">M 6 12 L 6 12.1, M 12 12.1 L 12 12, M 18 12.1 L 18 12</string>
    <string name="faboptions_vector_close_path">M 6 6 L 18 18, M 12 12 L 12 12, M 6 18 L 18 6</string>
</resources>
