<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/background"
        android:isScrollContainer="false"
        android:fitsSystemWindows="true"
        tools:context=".activities.SignupParentGanActivity">

    <!--  KinderGan City Spinner -->
    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/android_material_design_spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_KGanCityDropdown"
            android:textColorHint="@color/colorAccent"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/hint_KGanCity"
            app:met_floatingLabelTextColor="@color/colorAccent"
            app:met_primaryColor="@color/white"
            app:met_textColorHint="@color/white" />

    <!--  KinderGan Name Spinner -->
    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/android_material_design_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_KGanNameDropdown"
            android:textColorHint="@color/colorAccent"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/hint_KGanName"
            app:met_floatingLabelTextColor="@color/colorAccent"
            app:met_primaryColor="@color/white"
            app:met_textColorHint="@color/white" />

    <!--  KinderGan Class Spinner -->
    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/android_material_design_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_KGanClassDropdown"
            android:textColorHint="@color/colorAccent"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Class Number"
            app:met_floatingLabelTextColor="@color/colorAccent"
            app:met_primaryColor="@color/white"
            app:met_textColorHint="@color/white" />

    <!--  Kid's First Name Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
                android:id="@+id/input_FName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:maxLength="25"
                android:hint="@string/hint_KidFName"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Kid's Birth Date Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
                android:id="@+id/input_KidBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/white"
                android:focusable="false"
                android:hint="@string/hint_KidBirthDate"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

        <!--  Kid's Picture Button -->
        <ImageButton
                android:id="@+id/btn_KidPic"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pic"
                android:background="@null"
                android:contentDescription="@string/hint_pic"
                android:layout_gravity="left"/>

        <!--  Kid's Picture -->
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_KidPic"
                android:layout_toRightOf="@id/btn_KidPic"
                android:layout_marginLeft="60dp"/>

        <!-- Back Button -->
        <ImageButton
                android:id="@+id/img_btn_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:contentDescription="@string/btn_back"
                android:layout_below="@id/btn_KidPic"
                android:layout_toLeftOf="@id/imageView"
                android:src="@drawable/back" />
    </RelativeLayout>

    <!-- Register Button -->
    <ImageButton
            android:id="@+id/img_btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:background="@null"
            android:contentDescription="@string/btn_register"
            android:src="@drawable/register" />

    <!-- Login Link -->
    <TextView
            android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/login_lnk"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

</LinearLayout>